--- a/WebHocTrucTuyen/Views/Shared/_Layout.cshtml
+++ b/WebHocTrucTuyen/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
             <div class="navbar-collapse collapse" id="navbarsExample03">
                 <ul class="navbar-nav">
                     <li class="nav-item"> <a class="nav-link" aria-current="page" href="/Home/Index">Home</a> </li>
-                    <li class="nav-item"> <a class="nav-link" href="/Course/CourseIndex">Course</a> </li>
+                    <li class="nav-item"> <a class="nav-link" href="/Course/Index">Course</a> </li>
                     <li class="nav-item"> <a class="nav-link" href="#">Documents</a> </li>
                     <li class="nav-item"> <a class="nav-link" href="help.html">Help</a> </li>
                 </ul>
